# toy-gpt-char

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: download_data.py
src/toygpt/: __init__.py  data.py  ensure_data.py  generate.py  metrics.py  model.py  train.py
tests/: test_model_forward.py
