[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toygpt"
version = "0.1.0"
description = "Tiny char-level GPT on Tiny Shakespeare"
authors = [{name="Your Name"}]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=2.0.0"
]

[project.scripts]
toygpt-download-data = "toygpt.ensure_data:main"
toygpt-train = "toygpt.train:main"
toygpt-generate = "toygpt.generate:main"